afficher_etablissements transmet le type_etab à la carte en JSON. Amélioration de l'infobulle et nombre de flans

--- a/app/templates/liste_etablissements.html
+++ b/app/templates/liste_etablissements.html
@@ -52,7 +52,7 @@
             <h3>${etablissement.nom}</h3>
             <p class="type">${etablissement.type_etab}</p>
             <p class="adresse">${etablissement.adresse}, ${etablissement.ville}</p>
-            ${etablissement.flans ? `<p class="flans-count">${etablissement.flans.length} flan${etablissement.flans.length > 1 ? 's' : ''}</p>` : ''}
+            ${etablissement.flans_count ? `<p class="flans-count">${etablissement.flans_count} flan${etablissement.flan_count > 1 ? 's' : ''}</p>` : ''}
             <a href="${detailsUrl}">Voir la page</a>
         </div>
     `;
